[package]
name = "quic-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
quinn = "0.11.6"
tokio = { version = "1.32.0", features = ["full"] }
rustls = { version = "0.23.19", features = ["ring"] }
proto = { package = "quinn-proto", version = "0.11.7", default-features = false}
rcgen = "0.13.1"
structopt = "0.3.26"
env_logger = "0.9"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"